@@ -21,6 +21,7 @@ import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processors.aws.testutil.AuthUtils;
 import org.apache.nifi.reporting.InitializationException;
 import org.apache.nifi.util.MockFlowFile;
+import org.apache.nifi.util.PropertyMigrationResult;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -36,26 +37,26 @@ import software.amazon.awssdk.services.polly.model.GetSpeechSynthesisTaskRespons
 import software.amazon.awssdk.services.polly.model.SynthesisTask;
 import software.amazon.awssdk.services.polly.model.TaskStatus;
 
-import java.util.Collections;
+import java.util.Map;
 
 import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.AWS_TASK_OUTPUT_LOCATION;
 import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.REL_FAILURE;
 import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.REL_ORIGINAL;
 import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.REL_RUNNING;
 import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.REL_SUCCESS;
+import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.REGION;
 import static org.apache.nifi.processors.aws.ml.AbstractAwsMachineLearningJobStatusProcessor.TASK_ID;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class GetAwsPollyStatusTest {
+    private static final String DEFAULT_TASK_ID_ATTRIBUTE_NAME = "awsTaskId";
     private static final String TEST_TASK_ID = "testTaskId";
     private static final String PLACEHOLDER_CONTENT = "content";
     private TestRunner runner;
     @Mock
     private PollyClient mockPollyClient;
-
-    private GetAwsPollyJobStatus processor;
 
     @Captor
     private ArgumentCaptor<GetSpeechSynthesisTaskRequest> requestCaptor;
@@ -68,7 +69,7 @@ public class GetAwsPollyStatusTest {
 
     @BeforeEach
     public void setUp() throws InitializationException {
-        processor = new GetAwsPollyJobStatus() {
+        GetAwsPollyJobStatus processor = new GetAwsPollyJobStatus() {
             @Override
             public PollyClient getClient(final ProcessContext context) {
                 return mockPollyClient;
@@ -83,7 +84,7 @@ public class GetAwsPollyStatusTest {
                 .synthesisTask(SynthesisTask.builder().taskId(TEST_TASK_ID).taskStatus(TaskStatus.IN_PROGRESS).build())
                 .build();
         when(mockPollyClient.getSpeechSynthesisTask(requestCaptor.capture())).thenReturn(response);
-        runner.enqueue(PLACEHOLDER_CONTENT, Collections.singletonMap(TASK_ID.getName(), TEST_TASK_ID));
+        runner.enqueue(PLACEHOLDER_CONTENT, Map.of(DEFAULT_TASK_ID_ATTRIBUTE_NAME, TEST_TASK_ID));
         runner.run();
 
         runner.assertAllFlowFilesTransferred(REL_RUNNING);
@@ -100,7 +101,7 @@ public class GetAwsPollyStatusTest {
                         .outputUri(uri).build())
                 .build();
         when(mockPollyClient.getSpeechSynthesisTask(requestCaptor.capture())).thenReturn(response);
-        runner.enqueue(PLACEHOLDER_CONTENT, Collections.singletonMap(TASK_ID.getName(), TEST_TASK_ID));
+        runner.enqueue(PLACEHOLDER_CONTENT, Map.of(DEFAULT_TASK_ID_ATTRIBUTE_NAME, TEST_TASK_ID));
         runner.run();
 
         runner.assertTransferCount(REL_SUCCESS, 1);
@@ -124,7 +125,7 @@ public class GetAwsPollyStatusTest {
                         .taskStatusReason(failureReason).build())
                 .build();
         when(mockPollyClient.getSpeechSynthesisTask(requestCaptor.capture())).thenReturn(response);
-        runner.enqueue(PLACEHOLDER_CONTENT, Collections.singletonMap(TASK_ID.getName(), TEST_TASK_ID));
+        runner.enqueue(PLACEHOLDER_CONTENT, Map.of(DEFAULT_TASK_ID_ATTRIBUTE_NAME, TEST_TASK_ID));
         runner.run();
 
         runner.assertAllFlowFilesTransferred(REL_FAILURE);
@@ -132,5 +133,14 @@ public class GetAwsPollyStatusTest {
 
         final MockFlowFile flowFile = runner.getFlowFilesForRelationship(REL_FAILURE).iterator().next();
         assertEquals(failureReason, flowFile.getAttribute(GetAwsPollyJobStatus.FAILURE_REASON_ATTRIBUTE));
+    }
+
+    @Test
+    void testMigration() {
+        final PropertyMigrationResult propertyMigrationResult = runner.migrateProperties();
+        final Map<String, String> expected = Map.of("aws-region", REGION.getName(),
+                "awsTaskId", TASK_ID.getName());
+
+        assertEquals(expected, propertyMigrationResult.getPropertiesRenamed());
     }
 }
