@@ -27,11 +27,15 @@ import org.apache.nifi.controller.ReportingTaskNode;
 import org.apache.nifi.controller.service.ControllerServiceNode;
 import org.apache.nifi.groups.RemoteProcessGroup;
 import org.apache.nifi.web.ResourceNotFoundException;
+import org.apache.nifi.web.api.dto.ComponentStateDTO;
+import org.apache.nifi.web.api.dto.StateMapDTO;
 import org.apache.nifi.web.dao.ComponentStateDAO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
 
 @Repository
 public class StandardComponentStateDAO implements ComponentStateDAO {
@@ -42,28 +46,105 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
         try {
             final StateManager manager = stateManagerProvider.getStateManager(componentId);
             if (manager == null) {
-                throw new ResourceNotFoundException(String.format("State for the specified component %s could not be found.", componentId));
+                throw new ResourceNotFoundException("State for the specified component %s could not be found.".formatted(componentId));
             }
 
             return manager.getState(scope);
         } catch (final IOException ioe) {
-            throw new IllegalStateException(String.format("Unable to get the state for the specified component %s: %s", componentId, ioe), ioe);
+            throw new IllegalStateException("Unable to get the state for the specified component %s: %s".formatted(componentId, ioe), ioe);
         }
     }
 
-    private void clearState(final String componentId) {
+    private void clearState(final String componentId, final ComponentStateDTO componentStateDTO) {
         try {
             final StateManager manager = stateManagerProvider.getStateManager(componentId);
             if (manager == null) {
-                throw new ResourceNotFoundException(String.format("State for the specified component %s could not be found.", componentId));
+                throw new ResourceNotFoundException("State for the specified component %s could not be found.".formatted(componentId));
             }
 
-            // clear both state's at the same time
+            // No DTO provided: clear both scopes
+            if (componentStateDTO == null) {
+                manager.clear(Scope.CLUSTER);
+                manager.clear(Scope.LOCAL);
+                return;
+            }
+
+            // Determine if there is existing local state
+            final StateMap localStateMap = manager.getState(Scope.LOCAL);
+            final boolean hasLocalState = localStateMap != null && !localStateMap.toMap().isEmpty();
+
+            if (hasLocalState) {
+                // Local state exists
+                if (!stateManagerProvider.isClusterProviderEnabled()) {
+                    // Standalone mode: allow selective local key removal
+                    if (!manager.isStateKeyDropSupported()) {
+                        throw new IllegalStateException("Selective state key removal is not supported for component %s with local state.".formatted(componentId));
+                    }
+
+                    final Map<String, String> newLocalState = toStateMap(componentStateDTO.getLocalState());
+                    final Map<String, String> currentLocalState = localStateMap.toMap();
+
+                    if (hasExactlyOneKeyRemoved(currentLocalState, newLocalState)) {
+                        manager.setState(newLocalState, Scope.LOCAL);
+                    } else {
+                        throw new IllegalStateException("Unable to remove a state key for component %s. Exactly one key removal is supported.".formatted(componentId));
+                    }
+                } else {
+                    // Cluster mode with existing local state: do not allow selective removal
+                    throw new IllegalStateException("Selective state key removal is not supported for component %s with local state.".formatted(componentId));
+                }
+                return;
+            }
+
+            // No local state present, check for cluster state selective removal
+            final StateMapDTO clusterStateMapDto = componentStateDTO.getClusterState();
+            if (clusterStateMapDto != null && clusterStateMapDto.getState() != null && !clusterStateMapDto.getState().isEmpty()) {
+                if (!manager.isStateKeyDropSupported()) {
+                    throw new IllegalStateException("Selective state key removal is not supported for component %s with cluster state.".formatted(componentId));
+                }
+
+                final Map<String, String> newClusterState = toStateMap(clusterStateMapDto);
+                final Map<String, String> currentClusterState = manager.getState(Scope.CLUSTER).toMap();
+
+                if (hasExactlyOneKeyRemoved(currentClusterState, newClusterState)) {
+                    manager.setState(newClusterState, Scope.CLUSTER);
+                } else {
+                    throw new IllegalStateException("Unable to remove a state key for component %s. Exactly one key removal is supported.".formatted(componentId));
+                }
+
+                // Ensure local state is cleared
+                manager.clear(Scope.LOCAL);
+                return;
+            }
+
+            // Default: clear both scopes
             manager.clear(Scope.CLUSTER);
             manager.clear(Scope.LOCAL);
         } catch (final IOException ioe) {
-            throw new IllegalStateException(String.format("Unable to clear the state for the specified component %s: %s", componentId, ioe), ioe);
+            throw new IllegalStateException("Unable to clear the state for the specified component %s: %s".formatted(componentId, ioe), ioe);
         }
+    }
+
+    private boolean hasExactlyOneKeyRemoved(Map<String, String> currentState, Map<String, String> newState) {
+        // Check if newState has exactly one less key
+        if (currentState.size() - newState.size() != 1) {
+            return false;
+        }
+
+        // Check that newState is a subset of currentState
+        return newState.entrySet()
+                .stream()
+                .allMatch(entry -> entry.getValue().equals(currentState.get(entry.getKey())));
+    }
+
+    private static Map<String, String> toStateMap(final StateMapDTO stateMapDTO) {
+        final Map<String, String> map = new HashMap<>();
+        if (stateMapDTO == null || stateMapDTO.getState() == null) {
+            return map;
+        }
+
+        stateMapDTO.getState().forEach(entry -> map.put(entry.getKey(), entry.getValue()));
+        return map;
     }
 
     @Override
@@ -72,8 +153,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ProcessorNode processor) {
-        clearState(processor.getIdentifier());
+    public void clearState(final ProcessorNode processor, final ComponentStateDTO componentStateDTO) {
+        clearState(processor.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -82,8 +163,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ControllerServiceNode controllerService) {
-        clearState(controllerService.getIdentifier());
+    public void clearState(final ControllerServiceNode controllerService, final ComponentStateDTO componentStateDTO) {
+        clearState(controllerService.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -92,8 +173,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ReportingTaskNode reportingTask) {
-        clearState(reportingTask.getIdentifier());
+    public void clearState(final ReportingTaskNode reportingTask, final ComponentStateDTO componentStateDTO) {
+        clearState(reportingTask.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -102,8 +183,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final FlowAnalysisRuleNode flowAnalysisRule) {
-        clearState(flowAnalysisRule.getIdentifier());
+    public void clearState(final FlowAnalysisRuleNode flowAnalysisRule, final ComponentStateDTO componentStateDTO) {
+        clearState(flowAnalysisRule.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -112,8 +193,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ParameterProviderNode parameterProvider) {
-        clearState(parameterProvider.getIdentifier());
+    public void clearState(final ParameterProviderNode parameterProvider, final ComponentStateDTO componentStateDTO) {
+        clearState(parameterProvider.getIdentifier(), componentStateDTO);
     }
 
     @Override
